--- a/src/main/external-resources/plugins/jumpy/readme.html
+++ b/src/main/external-resources/plugins/jumpy/readme.html
@@ -200,6 +200,10 @@ Define an environment variable to be set when the current folder or its descenda
 <ul>Get jumpy's home path.
 </ul>
 <br/>
+<li><kbd>pms.getFolderName</kbd><code>()</code></li>
+<ul>Get the name of the current xmb folder.
+</ul>
+<br/>
 <li><kbd>pms.getProfileDir</kbd><code>()</code></li>
 <ul>Get the PMS profile path (where confs can be read/written).
 </ul>
